CHANGELOG OF TEASCRIPT
=======================
This changelog is for the TasScript Host Application as well as the TeaScript C++ Library.

NOTE: The dates are not the release dates, but a last commit date.


================
VERSION 0.17.0 (not released yet, pre-release)
================
    CLEAN: removed TEASCRIPT_DISABLE_GETVALUE_CONSTCHECK switch.
    - Please, call GetValue< Type const >() for inner const values
      or use one of the more clean GetConstValue()|GetMutableValue() or GetValueCopy() instead.

    HOST: changed copyright year to 2026


================
VERSION 0.16.0, Sa Dec 20 12:24:43 2025
================
    VERSION: 0.16.0 - Error type, catch statement, default shared params, BSON.

    EXAMPLES: added example_v0.16.tea for demo catch, Error and bson.
    - added bson test to corelibrary_test05.tea
    COLLECTION: fixed typo in RemoveValueByKeyWithPlaceholder().
    ARITHMETIC: (optimized) don't check for overflow if types are same in Convert function.

    CORELIB: raised API level to 1 (because changed to Error return).
    CORELIB: made _f64toi64 DEPRECATED!
    - removed all internal usage of _f64toi64.

    CORELIB (BREAKING!): changed all _buf_get_x functions to return Error instead of Bool(false).    
    CORELIB (BREAKING!): clean and proper Error handling for more functions which
    ... returned Bool(false) on error but has a different type as Bool on success.
    ... They will now return the new Error type on error.
    - changed functions: _strfromascii, read[text]file, read[toml|json]file,
      read[toml|json]string, write[toml|json]string, read/writebsonbuffer

    CORELIB (BREAKING!): _strtonum/_strtonumex now return an Error instead of a Bool(false)
    CORELIB (BREAKING!): changed to_i64/to_f64 return an Error instead of Bool(false).
    - improved to_number() for Number input (and Error input)

    TSVM: added TSVM instruction Catch for execute Error path if Error/NaV is on top stack.