@@ -26,18 +26,6 @@ namespace teascript {
 
 namespace util {
 
-// DEPRECATED!
-template< typename T >
-inline
-T &get_value( ValueObject &rObj )
-{
-    if constexpr( std::is_same_v<T, ValueObject> ) {
-        return rObj;
-    } else {
-        return rObj.GetValue<T>();
-    }
-}
-
 template< typename T >
 inline
 T get_value_ex( ValueObject &rObj )
@@ -340,244 +328,4 @@ public:
     }
 };
 
-
-//DONE! During a rainy afternoon and after 2 cups of coffee, I will convert these LibraryFunctions to one generic one dealing with arbitrary parameter count
-//      by using variadic parameter pack... :-)
-//      Update: but it was during a hot summer afternoon!
-
-
-// IMPORTANT: The next functions, LibraryFunction0 to LibraryFunction5, are DEPRECATED!
-//            Please, use the new and improved LibraryFunction (above) instead!
-
-// DEPRECATED! Please, use LibraryFunction instead!
-template< typename F, typename RES = void >
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction0 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction0( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction0() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 0u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 0)!" );
-        }
-        if constexpr( std::is_same_v<RES, ValueObject> ) {
-            return mpFunc();
-        } else if constexpr( not std::is_same_v<RES, void> ) {
-            auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-            return ValueObject( mpFunc(), cfg );
-        } else {
-            mpFunc();
-            return {};
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 0;
-    }
-};
-
-// DEPRECATED! Please, use LibraryFunction instead!
-// experimental variant with bool with_context. If true a first parameter is added to thw call: the Context.
-template< typename F, typename T1, typename RES = void, bool with_context = false>
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction1 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction1( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction1() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 1u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 1)!" );
-        }
-        if constexpr( not with_context ) {
-            if constexpr( std::is_same_v<RES, ValueObject> ) {
-                return mpFunc( util::get_value<T1>( rParams[0] ) );
-            } else if constexpr( not std::is_same_v<RES, void> ) {
-                auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-                return ValueObject( mpFunc( util::get_value<T1>( rParams[0] ) ), cfg );
-            } else {
-                mpFunc( util::get_value<T1>( rParams[0] ) );
-                return {};
-            }
-        } else {
-            if constexpr( std::is_same_v<RES, ValueObject> ) {
-                return mpFunc( rContext, util::get_value<T1>( rParams[0] ) );
-            } else if constexpr( not std::is_same_v<RES, void> ) {
-                auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-                return ValueObject( mpFunc( rContext, util::get_value<T1>( rParams[0] ) ), cfg );
-            } else {
-                mpFunc( rContext, util::get_value<T1>( rParams[0] ) );
-                return {};
-            }
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 1;
-    }
-};
-
-// DEPRECATED! Please, use LibraryFunction instead!
-template< typename F, typename T1, typename T2, typename RES = void>
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction2 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction2( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction2() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 2u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 2)!" );
-        }
-        if constexpr( std::is_same_v<RES, ValueObject> ) {
-            return mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ) );
-        } else if constexpr( not std::is_same_v<RES, void> ) {
-            auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-            return ValueObject( mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ) ), cfg );
-        } else {
-            mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ) );
-            return {};
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 2;
-    }
-};
-
-// DEPRECATED! Please, use LibraryFunction instead!
-template< typename F, typename T1, typename T2, typename T3, typename RES = void>
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction3 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction3( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction3() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 3u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 3)!" );
-        }
-        if constexpr( std::is_same_v<RES, ValueObject> ) {
-            return mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ) );
-        } else if constexpr( not std::is_same_v<RES, void> ) {
-            auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-            return ValueObject( mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ) ), cfg );
-        } else {
-            mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ) );
-            return {};
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 3;
-    }
-};
-
-// DEPRECATED! Please, use LibraryFunction instead!
-template< typename F, typename T1, typename T2, typename T3, typename T4, typename RES = void>
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction4 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction4( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction4() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 4u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 4)!" );
-        }
-        if constexpr( std::is_same_v<RES, ValueObject> ) {
-            return mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ) );
-        } else if constexpr( not std::is_same_v<RES, void> ) {
-            auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-            return ValueObject( mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ) ), cfg );
-        } else {
-            mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ) );
-            return {};
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 4;
-    }
-};
-
-// DEPRECATED! Please, use LibraryFunction instead!
-template< typename F, typename T1, typename T2, typename T3, typename T4, typename T5, typename RES = void>
-class [[deprecated( "Please, use the new and generic LibraryFunction<> instead!" )]] LibraryFunction5 : public FunctionBase
-{
-    F *mpFunc;
-public:
-    LibraryFunction5( F *f )
-        : FunctionBase()
-        , mpFunc( f )
-    {
-    }
-
-    virtual ~LibraryFunction5() {}
-
-    ValueObject Call( Context &rContext, std::vector<ValueObject> &rParams, SourceLocation const &rLoc ) override
-    {
-        if( 5u != rParams.size() ) {
-            throw exception::eval_error( rLoc, "Func Call: Wrong amount of passed parameters (must be 5)!" );
-        }
-        if constexpr( std::is_same_v<RES, ValueObject> ) {
-            return mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ), util::get_value<T5>( rParams[4] ) );
-        } else if constexpr( not std::is_same_v<RES, void> ) {
-            auto const cfg = ValueConfig( ValueUnshared, ValueMutable, rContext.GetTypeSystem() ); // return values are unshared by default.
-            return ValueObject( mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ), util::get_value<T5>( rParams[4] ) ), cfg );
-        } else {
-            mpFunc( util::get_value<T1>( rParams[0] ), util::get_value<T2>( rParams[1] ), util::get_value<T3>( rParams[2] ), util::get_value<T4>( rParams[3] ), util::get_value<T5>( rParams[4] ) );
-            return {};
-        }
-    }
-
-    int ParamCount() const final
-    {
-        return 5;
-    }
-};
-
-
 } // namespace teascript
-
