@@ -8,6 +8,9 @@ NOTE: The dates are not the release dates, but a last commit date.
 ================
 VERSION 0.17.0 (not released yet, pre-release)
 ================
+    CLEAN: finally removed deprecated class LibraryFunction0<> to LibraryFunction5<>.
+    - Please, use the new and generic one fits for all LibraryFunction<> instead.
+
     CLEAN: removed TEASCRIPT_DISABLE_GETVALUE_CONSTCHECK switch.
     - Please, call GetValue< Type const >() for inner const values
       or use one of the more clean GetConstValue()|GetMutableValue() or GetValueCopy() instead.
